Add distillbert based qa. model optimized using onnx

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,10 @@ dependencies = [
     "gunicorn",
     "bs4",
     "flask_sqlalchemy",
-    "SQLAlchemy-serializer"
+    "SQLAlchemy-serializer",
+    "transformers",
+    "torch",
+    "onnxruntime",
 ]
 
 
