--- a/requirements.txt
+++ b/requirements.txt
@@ -24,12 +24,24 @@ charset-normalizer==3.0.1
     #   requests
 click==8.1.3
     # via flask
+cmake==3.26.0
+    # via triton
+coloredlogs==15.0.1
+    # via onnxruntime
+filelock==3.10.0
+    # via
+    #   huggingface-hub
+    #   torch
+    #   transformers
+    #   triton
 flask==2.2.3
     # via
     #   flask-sqlalchemy
     #   wq (pyproject.toml)
 flask-sqlalchemy==3.0.3
     # via wq (pyproject.toml)
+flatbuffers==23.3.3
+    # via onnxruntime
 frozenlist==1.3.3
     # via
     #   aiohttp
@@ -38,6 +50,10 @@ greenlet==2.0.2
     # via sqlalchemy
 gunicorn==20.1.0
     # via wq (pyproject.toml)
+huggingface-hub==0.13.3
+    # via transformers
+humanfriendly==10.0
+    # via coloredlogs
 idna==3.4
     # via
     #   requests
@@ -45,21 +61,76 @@ idna==3.4
 itsdangerous==2.1.2
     # via flask
 jinja2==3.1.2
-    # via flask
+    # via
+    #   flask
+    #   torch
+lit==16.0.0
+    # via triton
 markupsafe==2.1.2
     # via
     #   jinja2
     #   werkzeug
+mpmath==1.3.0
+    # via sympy
 multidict==6.0.4
     # via
     #   aiohttp
     #   yarl
+networkx==3.0
+    # via torch
+numpy==1.24.2
+    # via
+    #   onnxruntime
+    #   transformers
+nvidia-cublas-cu11==11.10.3.66
+    # via
+    #   nvidia-cudnn-cu11
+    #   nvidia-cusolver-cu11
+    #   torch
+nvidia-cuda-cupti-cu11==11.7.101
+    # via torch
+nvidia-cuda-nvrtc-cu11==11.7.99
+    # via torch
+nvidia-cuda-runtime-cu11==11.7.99
+    # via torch
+nvidia-cudnn-cu11==8.5.0.96
+    # via torch
+nvidia-cufft-cu11==10.9.0.58
+    # via torch
+nvidia-curand-cu11==10.2.10.91
+    # via torch
+nvidia-cusolver-cu11==11.4.0.1
+    # via torch
+nvidia-cusparse-cu11==11.7.4.91
+    # via torch
+nvidia-nccl-cu11==2.14.3
+    # via torch
+nvidia-nvtx-cu11==11.7.91
+    # via torch
+onnxruntime==1.14.1
+    # via wq (pyproject.toml)
 openai==0.27.0
     # via wq (pyproject.toml)
+packaging==23.0
+    # via
+    #   huggingface-hub
+    #   onnxruntime
+    #   transformers
+protobuf==4.22.1
+    # via onnxruntime
 python-dotenv==1.0.0
     # via wq (pyproject.toml)
+pyyaml==6.0
+    # via
+    #   huggingface-hub
+    #   transformers
+regex==2022.10.31
+    # via transformers
 requests==2.28.2
-    # via openai
+    # via
+    #   huggingface-hub
+    #   openai
+    #   transformers
 soupsieve==2.4
     # via beautifulsoup4
 sqlalchemy==2.0.4
@@ -68,14 +139,42 @@ sqlalchemy==2.0.4
     #   sqlalchemy-serializer
 sqlalchemy-serializer==1.4.1
     # via wq (pyproject.toml)
+sympy==1.11.1
+    # via
+    #   onnxruntime
+    #   torch
+tokenizers==0.13.2
+    # via transformers
+torch==2.0.0
+    # via
+    #   triton
+    #   wq (pyproject.toml)
 tqdm==4.64.1
-    # via openai
+    # via
+    #   huggingface-hub
+    #   openai
+    #   transformers
+transformers==4.27.2
+    # via wq (pyproject.toml)
+triton==2.0.0
+    # via torch
 typing-extensions==4.5.0
-    # via sqlalchemy
+    # via
+    #   huggingface-hub
+    #   sqlalchemy
+    #   torch
 urllib3==1.26.14
     # via requests
 werkzeug==2.2.3
     # via flask
+wheel==0.40.0
+    # via
+    #   nvidia-cublas-cu11
+    #   nvidia-cuda-cupti-cu11
+    #   nvidia-cuda-runtime-cu11
+    #   nvidia-curand-cu11
+    #   nvidia-cusparse-cu11
+    #   nvidia-nvtx-cu11
 yarl==1.8.2
     # via aiohttp
 
