--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,9 @@ charset-normalizer==3.0.1
     #   aiohttp
     #   requests
 click==8.1.3
-    # via flask
+    # via
+    #   flask
+    #   nltk
 cmake==3.26.0
     # via triton
 coloredlogs==15.0.1
@@ -64,6 +66,8 @@ jinja2==3.1.2
     # via
     #   flask
     #   torch
+joblib==1.2.0
+    # via nltk
 lit==16.0.0
     # via triton
 markupsafe==2.1.2
@@ -78,6 +82,8 @@ multidict==6.0.4
     #   yarl
 networkx==3.0
     # via torch
+nltk==3.8.1
+    # via wq (pyproject.toml)
 numpy==1.24.2
     # via
     #   onnxruntime
@@ -125,7 +131,9 @@ pyyaml==6.0
     #   huggingface-hub
     #   transformers
 regex==2022.10.31
-    # via transformers
+    # via
+    #   nltk
+    #   transformers
 requests==2.28.2
     # via
     #   huggingface-hub
@@ -152,6 +160,7 @@ torch==2.0.0
 tqdm==4.64.1
     # via
     #   huggingface-hub
+    #   nltk
     #   openai
     #   transformers
 transformers==4.27.2
