--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ aiohttp==3.8.4
 aiosignal==1.3.1
     # via aiohttp
 async-timeout==4.0.2
-    # via aiohttp
+    # via
+    #   aiohttp
+    #   redis
 attrs==22.2.0
     # via aiohttp
 beautifulsoup4==4.11.2
@@ -130,6 +132,8 @@ pyyaml==6.0
     # via
     #   huggingface-hub
     #   transformers
+redis==4.5.3
+    # via wq (pyproject.toml)
 regex==2022.10.31
     # via
     #   nltk
