--- a/requirements.txt
+++ b/requirements.txt
@@ -4,22 +4,16 @@
 #
 #    pip-compile --extra=dev --output-file=requirements.txt pyproject.toml
 #
-aiohttp==3.8.4
-    # via openai
-aiosignal==1.3.1
-    # via aiohttp
+annotated-types==0.5.0
+    # via pydantic
+anyio==3.7.1
+    # via starlette
 async-timeout==4.0.2
-    # via
-    #   aiohttp
-    #   redis
-attrs==23.1.0
-    # via aiohttp
+    # via redis
 beautifulsoup4==4.12.2
     # via bs4
 black==23.7.0
     # via wq (pyproject.toml)
-blinker==1.6.2
-    # via flask
 bs4==0.0.1
     # via wq (pyproject.toml)
 cachetools==5.3.1
@@ -28,124 +22,51 @@ certifi==2023.5.7
     # via requests
 chardet==5.1.0
     # via tox
-charset-normalizer==3.1.0
-    # via
-    #   aiohttp
-    #   requests
+charset-normalizer==3.2.0
+    # via requests
 click==8.1.4
     # via
     #   black
-    #   flask
-    #   nltk
-cmake==3.26.4
-    # via triton
+    #   uvicorn
 colorama==0.4.6
     # via tox
-coloredlogs==15.0.1
-    # via onnxruntime
+diskcache==5.6.1
+    # via llama-cpp-python
 distlib==0.3.6
     # via virtualenv
+faiss-cpu==1.7.4
+    # via wq (pyproject.toml)
+fastapi==0.100.0
+    # via wq (pyproject.toml)
 filelock==3.12.2
     # via
-    #   huggingface-hub
-    #   torch
     #   tox
-    #   transformers
-    #   triton
     #   virtualenv
-flask==2.3.2
-    # via
-    #   flask-sqlalchemy
-    #   wq (pyproject.toml)
-flask-sqlalchemy==3.0.5
+gpt4all==1.0.5
     # via wq (pyproject.toml)
-flatbuffers==23.5.26
-    # via onnxruntime
-frozenlist==1.3.3
-    # via
-    #   aiohttp
-    #   aiosignal
-fsspec==2023.6.0
-    # via huggingface-hub
-greenlet==2.0.2
-    # via sqlalchemy
-gunicorn==20.1.0
-    # via wq (pyproject.toml)
-huggingface-hub==0.16.2
-    # via transformers
-humanfriendly==10.0
-    # via coloredlogs
+h11==0.14.0
+    # via uvicorn
 idna==3.4
     # via
+    #   anyio
     #   requests
-    #   yarl
-itsdangerous==2.1.2
-    # via flask
+isort==5.12.0
+    # via wq (pyproject.toml)
 jinja2==3.1.2
-    # via
-    #   flask
-    #   torch
-joblib==1.3.1
-    # via nltk
-lit==16.0.6
-    # via triton
+    # via wq (pyproject.toml)
+llama-cpp-python==0.1.72
+    # via wq (pyproject.toml)
 markupsafe==2.1.3
-    # via
-    #   jinja2
-    #   werkzeug
-mpmath==1.3.0
-    # via sympy
-multidict==6.0.4
-    # via
-    #   aiohttp
-    #   yarl
+    # via jinja2
 mypy-extensions==1.0.0
     # via black
-networkx==3.1
-    # via torch
-nltk==3.8.1
-    # via wq (pyproject.toml)
 numpy==1.25.0
-    # via
-    #   onnxruntime
-    #   transformers
-nvidia-cublas-cu11==11.10.3.66
-    # via
-    #   nvidia-cudnn-cu11
-    #   nvidia-cusolver-cu11
-    #   torch
-nvidia-cuda-cupti-cu11==11.7.101
-    # via torch
-nvidia-cuda-nvrtc-cu11==11.7.99
-    # via torch
-nvidia-cuda-runtime-cu11==11.7.99
-    # via torch
-nvidia-cudnn-cu11==8.5.0.96
-    # via torch
-nvidia-cufft-cu11==10.9.0.58
-    # via torch
-nvidia-curand-cu11==10.2.10.91
-    # via torch
-nvidia-cusolver-cu11==11.4.0.1
-    # via torch
-nvidia-cusparse-cu11==11.7.4.91
-    # via torch
-nvidia-nccl-cu11==2.14.3
-    # via torch
-nvidia-nvtx-cu11==11.7.91
-    # via torch
-onnxruntime==1.15.1
-    # via wq (pyproject.toml)
-openai==0.27.8
-    # via wq (pyproject.toml)
+    # via llama-cpp-python
 packaging==23.1
     # via
     #   black
-    #   huggingface-hub
-    #   onnxruntime
     #   pyproject-api
     #   tox
-    #   transformers
 pathspec==0.11.1
     # via black
 platformdirs==3.8.1
@@ -155,82 +76,43 @@ platformdirs==3.8.1
     #   virtualenv
 pluggy==1.2.0
     # via tox
-protobuf==4.23.4
-    # via onnxruntime
+pydantic==2.0.3
+    # via
+    #   fastapi
+    #   wq (pyproject.toml)
+pydantic-core==2.3.0
+    # via pydantic
 pyproject-api==1.5.3
     # via tox
 python-dotenv==1.0.0
     # via wq (pyproject.toml)
-pyyaml==6.0
-    # via
-    #   huggingface-hub
-    #   transformers
 redis==4.6.0
     # via wq (pyproject.toml)
-regex==2023.6.3
-    # via
-    #   nltk
-    #   transformers
 requests==2.31.0
-    # via
-    #   huggingface-hub
-    #   openai
-    #   transformers
+    # via gpt4all
 ruff==0.0.278
     # via wq (pyproject.toml)
-safetensors==0.3.1
-    # via transformers
+sniffio==1.3.0
+    # via anyio
 soupsieve==2.4.1
     # via beautifulsoup4
-sqlalchemy==2.0.18
-    # via
-    #   flask-sqlalchemy
-    #   sqlalchemy-serializer
-sqlalchemy-serializer==1.4.1
-    # via wq (pyproject.toml)
-sympy==1.12
-    # via
-    #   onnxruntime
-    #   torch
-tokenizers==0.13.3
-    # via transformers
-torch==2.0.1
-    # via
-    #   triton
-    #   wq (pyproject.toml)
+starlette==0.27.0
+    # via fastapi
 tox==4.6.4
     # via wq (pyproject.toml)
 tqdm==4.65.0
     # via
-    #   huggingface-hub
-    #   nltk
-    #   openai
-    #   transformers
-transformers==4.30.2
-    # via wq (pyproject.toml)
-triton==2.0.0
-    # via torch
+    #   gpt4all
+    #   wq (pyproject.toml)
 typing-extensions==4.7.1
     # via
-    #   huggingface-hub
-    #   sqlalchemy
-    #   torch
+    #   fastapi
+    #   llama-cpp-python
+    #   pydantic
+    #   pydantic-core
 urllib3==2.0.3
     # via requests
+uvicorn==0.23.0
+    # via wq (pyproject.toml)
 virtualenv==20.24.0
     # via tox
-werkzeug==2.3.6
-    # via flask
-wheel==0.40.0
-    # via
-    #   nvidia-cublas-cu11
-    #   nvidia-cuda-cupti-cu11
-    #   nvidia-cuda-runtime-cu11
-    #   nvidia-curand-cu11
-    #   nvidia-cusparse-cu11
-    #   nvidia-nvtx-cu11
-yarl==1.9.2
-    # via aiohttp
-
-# The following packages are considered to be unsafe in a requirements file:
-# setuptools
