--- a/requirements.txt
+++ b/requirements.txt
@@ -7,68 +7,113 @@
 annotated-types==0.5.0
     # via pydantic
 anyio==3.7.1
-    # via starlette
-async-timeout==4.0.2
-    # via redis
+    # via
+    #   starlette
+    #   watchfiles
+backoff==2.2.1
+    # via posthog
 beautifulsoup4==4.12.2
     # via bs4
 black==23.7.0
     # via wq (pyproject.toml)
 bs4==0.0.1
     # via wq (pyproject.toml)
+build==0.10.0
+    # via pip-tools
 cachetools==5.3.1
     # via tox
 certifi==2023.5.7
-    # via requests
+    # via
+    #   clickhouse-connect
+    #   pulsar-client
+    #   requests
 chardet==5.1.0
     # via tox
 charset-normalizer==3.2.0
     # via requests
+chromadb==0.3.26
+    # via wq (pyproject.toml)
 click==8.1.4
     # via
     #   black
+    #   pip-tools
     #   uvicorn
+clickhouse-connect==0.6.8
+    # via chromadb
 colorama==0.4.6
     # via tox
+coloredlogs==15.0.1
+    # via onnxruntime
 diskcache==5.6.1
     # via llama-cpp-python
 distlib==0.3.6
     # via virtualenv
-faiss-cpu==1.7.4
-    # via wq (pyproject.toml)
+duckdb==0.8.1
+    # via chromadb
 fastapi==0.100.0
-    # via wq (pyproject.toml)
+    # via
+    #   chromadb
+    #   wq (pyproject.toml)
 filelock==3.12.2
     # via
     #   tox
     #   virtualenv
-gpt4all==1.0.5
-    # via wq (pyproject.toml)
+flatbuffers==23.5.26
+    # via onnxruntime
 h11==0.14.0
     # via uvicorn
+hnswlib==0.7.0
+    # via chromadb
+httptools==0.6.0
+    # via uvicorn
+humanfriendly==10.0
+    # via coloredlogs
 idna==3.4
     # via
     #   anyio
     #   requests
+importlib-metadata==6.8.0
+    # via clickhouse-connect
 isort==5.12.0
     # via wq (pyproject.toml)
 jinja2==3.1.2
     # via wq (pyproject.toml)
 llama-cpp-python==0.1.72
     # via wq (pyproject.toml)
+lz4==4.3.2
+    # via clickhouse-connect
 markupsafe==2.1.3
     # via jinja2
+monotonic==1.6
+    # via posthog
+mpmath==1.3.0
+    # via sympy
 mypy-extensions==1.0.0
     # via black
 numpy==1.25.0
-    # via llama-cpp-python
+    # via
+    #   chromadb
+    #   hnswlib
+    #   llama-cpp-python
+    #   onnxruntime
+    #   pandas
+onnxruntime==1.15.1
+    # via chromadb
+overrides==7.3.1
+    # via chromadb
 packaging==23.1
     # via
     #   black
+    #   build
+    #   onnxruntime
     #   pyproject-api
     #   tox
+pandas==2.0.3
+    # via chromadb
 pathspec==0.11.1
     # via black
+pip-tools==7.0.0
+    # via wq (pyproject.toml)
 platformdirs==3.8.1
     # via
     #   black
@@ -76,43 +121,92 @@ platformdirs==3.8.1
     #   virtualenv
 pluggy==1.2.0
     # via tox
+posthog==3.0.1
+    # via chromadb
+protobuf==4.23.4
+    # via onnxruntime
+pulsar-client==3.2.0
+    # via chromadb
 pydantic==2.0.3
     # via
+    #   chromadb
     #   fastapi
-    #   wq (pyproject.toml)
 pydantic-core==2.3.0
     # via pydantic
 pyproject-api==1.5.3
     # via tox
+pyproject-hooks==1.0.0
+    # via build
+python-dateutil==2.8.2
+    # via
+    #   pandas
+    #   posthog
 python-dotenv==1.0.0
-    # via wq (pyproject.toml)
-redis==4.6.0
-    # via wq (pyproject.toml)
+    # via
+    #   uvicorn
+    #   wq (pyproject.toml)
+pytz==2023.3
+    # via
+    #   clickhouse-connect
+    #   pandas
+pyyaml==6.0.1
+    # via uvicorn
 requests==2.31.0
-    # via gpt4all
+    # via
+    #   chromadb
+    #   posthog
 ruff==0.0.278
     # via wq (pyproject.toml)
+six==1.16.0
+    # via
+    #   posthog
+    #   python-dateutil
 sniffio==1.3.0
     # via anyio
 soupsieve==2.4.1
     # via beautifulsoup4
 starlette==0.27.0
     # via fastapi
+sympy==1.12
+    # via onnxruntime
+tokenizers==0.13.3
+    # via chromadb
 tox==4.6.4
     # via wq (pyproject.toml)
 tqdm==4.65.0
-    # via
-    #   gpt4all
-    #   wq (pyproject.toml)
+    # via chromadb
 typing-extensions==4.7.1
     # via
+    #   chromadb
     #   fastapi
     #   llama-cpp-python
     #   pydantic
     #   pydantic-core
+tzdata==2023.3
+    # via pandas
 urllib3==2.0.3
-    # via requests
-uvicorn==0.23.0
-    # via wq (pyproject.toml)
+    # via
+    #   clickhouse-connect
+    #   requests
+uvicorn[standard]==0.23.0
+    # via
+    #   chromadb
+    #   wq (pyproject.toml)
+uvloop==0.17.0
+    # via uvicorn
 virtualenv==20.24.0
     # via tox
+watchfiles==0.19.0
+    # via uvicorn
+websockets==11.0.3
+    # via uvicorn
+wheel==0.40.0
+    # via pip-tools
+zipp==3.16.2
+    # via importlib-metadata
+zstandard==0.21.0
+    # via clickhouse-connect
+
+# The following packages are considered to be unsafe in a requirements file:
+# pip
+# setuptools
