--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,6 @@
 #
 #    pip-compile --extra=dev --output-file=requirements.txt pyproject.toml
 #
-annotated-types==0.5.0
-    # via pydantic
 anyio==3.7.1
     # via
     #   starlette
@@ -24,33 +22,30 @@ cachetools==5.3.1
     # via tox
 certifi==2023.5.7
     # via
-    #   clickhouse-connect
     #   pulsar-client
     #   requests
 chardet==5.1.0
     # via tox
 charset-normalizer==3.2.0
     # via requests
-chromadb==0.3.26
+chroma-hnswlib==0.7.1
+    # via chromadb
+chromadb==0.4.2
     # via wq (pyproject.toml)
-click==8.1.4
+click==8.1.6
     # via
     #   black
     #   pip-tools
     #   uvicorn
-clickhouse-connect==0.6.8
-    # via chromadb
 colorama==0.4.6
     # via tox
 coloredlogs==15.0.1
     # via onnxruntime
 diskcache==5.6.1
     # via llama-cpp-python
-distlib==0.3.6
+distlib==0.3.7
     # via virtualenv
-duckdb==0.8.1
-    # via chromadb
-fastapi==0.100.0
+fastapi==0.99.1
     # via
     #   chromadb
     #   wq (pyproject.toml)
@@ -62,8 +57,6 @@ flatbuffers==23.5.26
     # via onnxruntime
 h11==0.14.0
     # via uvicorn
-hnswlib==0.7.0
-    # via chromadb
 httptools==0.6.0
     # via uvicorn
 humanfriendly==10.0
@@ -72,16 +65,14 @@ idna==3.4
     # via
     #   anyio
     #   requests
-importlib-metadata==6.8.0
-    # via clickhouse-connect
+importlib-resources==6.0.0
+    # via chromadb
 isort==5.12.0
     # via wq (pyproject.toml)
 jinja2==3.1.2
     # via wq (pyproject.toml)
-llama-cpp-python==0.1.72
+llama-cpp-python==0.1.73
     # via wq (pyproject.toml)
-lz4==4.3.2
-    # via clickhouse-connect
 markupsafe==2.1.3
     # via jinja2
 monotonic==1.6
@@ -90,10 +81,10 @@ mpmath==1.3.0
     # via sympy
 mypy-extensions==1.0.0
     # via black
-numpy==1.25.0
+numpy==1.25.1
     # via
+    #   chroma-hnswlib
     #   chromadb
-    #   hnswlib
     #   llama-cpp-python
     #   onnxruntime
     #   pandas
@@ -112,9 +103,9 @@ pandas==2.0.3
     # via chromadb
 pathspec==0.11.1
     # via black
-pip-tools==7.0.0
+pip-tools==7.1.0
     # via wq (pyproject.toml)
-platformdirs==3.8.1
+platformdirs==3.9.1
     # via
     #   black
     #   tox
@@ -127,12 +118,13 @@ protobuf==4.23.4
     # via onnxruntime
 pulsar-client==3.2.0
     # via chromadb
-pydantic==2.0.3
+pydantic==1.10.11
     # via
     #   chromadb
     #   fastapi
-pydantic-core==2.3.0
-    # via pydantic
+    #   wq (pyproject.toml)
+pypika==0.48.9
+    # via chromadb
 pyproject-api==1.5.3
     # via tox
 pyproject-hooks==1.0.0
@@ -146,9 +138,7 @@ python-dotenv==1.0.0
     #   uvicorn
     #   wq (pyproject.toml)
 pytz==2023.3
-    # via
-    #   clickhouse-connect
-    #   pandas
+    # via pandas
 pyyaml==6.0.1
     # via uvicorn
 requests==2.31.0
@@ -181,14 +171,11 @@ typing-extensions==4.7.1
     #   fastapi
     #   llama-cpp-python
     #   pydantic
-    #   pydantic-core
 tzdata==2023.3
     # via pandas
 urllib3==2.0.3
-    # via
-    #   clickhouse-connect
-    #   requests
-uvicorn[standard]==0.23.0
+    # via requests
+uvicorn[standard]==0.23.1
     # via
     #   chromadb
     #   wq (pyproject.toml)
@@ -202,10 +189,6 @@ websockets==11.0.3
     # via uvicorn
 wheel==0.40.0
     # via pip-tools
-zipp==3.16.2
-    # via importlib-metadata
-zstandard==0.21.0
-    # via clickhouse-connect
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
