--- a/requirements.txt
+++ b/requirements.txt
@@ -20,17 +20,17 @@ build==0.10.0
     # via pip-tools
 cachetools==5.3.1
     # via tox
-certifi==2023.5.7
+certifi==2023.7.22
     # via
     #   pulsar-client
     #   requests
-chardet==5.1.0
+chardet==5.2.0
     # via tox
 charset-normalizer==3.2.0
     # via requests
-chroma-hnswlib==0.7.1
+chroma-hnswlib==0.7.2
     # via chromadb
-chromadb==0.4.2
+chromadb==0.4.5
     # via wq (pyproject.toml)
 click==8.1.6
     # via
@@ -65,13 +65,13 @@ idna==3.4
     # via
     #   anyio
     #   requests
-importlib-resources==6.0.0
+importlib-resources==6.0.1
     # via chromadb
 isort==5.12.0
     # via wq (pyproject.toml)
 jinja2==3.1.2
     # via wq (pyproject.toml)
-llama-cpp-python==0.1.73
+llama-cpp-python==0.1.77
     # via wq (pyproject.toml)
 markupsafe==2.1.3
     # via jinja2
@@ -81,16 +81,15 @@ mpmath==1.3.0
     # via sympy
 mypy-extensions==1.0.0
     # via black
-numpy==1.25.1
+numpy==1.25.2
     # via
     #   chroma-hnswlib
     #   chromadb
     #   llama-cpp-python
     #   onnxruntime
-    #   pandas
 onnxruntime==1.15.1
     # via chromadb
-overrides==7.3.1
+overrides==7.4.0
     # via chromadb
 packaging==23.1
     # via
@@ -99,13 +98,11 @@ packaging==23.1
     #   onnxruntime
     #   pyproject-api
     #   tox
-pandas==2.0.3
-    # via chromadb
-pathspec==0.11.1
+pathspec==0.11.2
     # via black
-pip-tools==7.1.0
+pip-tools==7.2.0
     # via wq (pyproject.toml)
-platformdirs==3.9.1
+platformdirs==3.10.0
     # via
     #   black
     #   tox
@@ -118,7 +115,7 @@ protobuf==4.23.4
     # via onnxruntime
 pulsar-client==3.2.0
     # via chromadb
-pydantic==1.10.11
+pydantic==1.10.12
     # via
     #   chromadb
     #   fastapi
@@ -130,22 +127,18 @@ pyproject-api==1.5.3
 pyproject-hooks==1.0.0
     # via build
 python-dateutil==2.8.2
-    # via
-    #   pandas
-    #   posthog
+    # via posthog
 python-dotenv==1.0.0
     # via
     #   uvicorn
     #   wq (pyproject.toml)
-pytz==2023.3
-    # via pandas
 pyyaml==6.0.1
     # via uvicorn
 requests==2.31.0
     # via
     #   chromadb
     #   posthog
-ruff==0.0.278
+ruff==0.0.282
     # via wq (pyproject.toml)
 six==1.16.0
     # via
@@ -171,23 +164,21 @@ typing-extensions==4.7.1
     #   fastapi
     #   llama-cpp-python
     #   pydantic
-tzdata==2023.3
-    # via pandas
-urllib3==2.0.3
+urllib3==2.0.4
     # via requests
-uvicorn[standard]==0.23.1
+uvicorn[standard]==0.23.2
     # via
     #   chromadb
     #   wq (pyproject.toml)
 uvloop==0.17.0
     # via uvicorn
-virtualenv==20.24.0
+virtualenv==20.24.2
     # via tox
 watchfiles==0.19.0
     # via uvicorn
 websockets==11.0.3
     # via uvicorn
-wheel==0.40.0
+wheel==0.41.1
     # via pip-tools
 
 # The following packages are considered to be unsafe in a requirements file:
