--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,7 @@
 #    pip-compile --extra=dev --output-file=requirements.txt pyproject.toml
 #
 anyio==3.7.1
-    # via
-    #   starlette
-    #   watchfiles
-backoff==2.2.1
-    # via posthog
+    # via starlette
 beautifulsoup4==4.12.2
     # via bs4
 black==23.7.0
@@ -20,18 +16,8 @@ build==0.10.0
     # via pip-tools
 cachetools==5.3.1
     # via tox
-certifi==2023.7.22
-    # via
-    #   pulsar-client
-    #   requests
 chardet==5.2.0
     # via tox
-charset-normalizer==3.2.0
-    # via requests
-chroma-hnswlib==0.7.2
-    # via chromadb
-chromadb==0.4.5
-    # via wq (pyproject.toml)
 click==8.1.6
     # via
     #   black
@@ -41,14 +27,10 @@ colorama==0.4.6
     # via tox
 coloredlogs==15.0.1
     # via onnxruntime
-diskcache==5.6.1
-    # via llama-cpp-python
 distlib==0.3.7
     # via virtualenv
 fastapi==0.99.1
-    # via
-    #   chromadb
-    #   wq (pyproject.toml)
+    # via wq (pyproject.toml)
 filelock==3.12.2
     # via
     #   tox
@@ -57,40 +39,24 @@ flatbuffers==23.5.26
     # via onnxruntime
 h11==0.14.0
     # via uvicorn
-httptools==0.6.0
-    # via uvicorn
 humanfriendly==10.0
     # via coloredlogs
 idna==3.4
-    # via
-    #   anyio
-    #   requests
-importlib-resources==6.0.1
-    # via chromadb
+    # via anyio
 isort==5.12.0
     # via wq (pyproject.toml)
 jinja2==3.1.2
     # via wq (pyproject.toml)
-llama-cpp-python==0.1.77
-    # via wq (pyproject.toml)
 markupsafe==2.1.3
     # via jinja2
-monotonic==1.6
-    # via posthog
 mpmath==1.3.0
     # via sympy
 mypy-extensions==1.0.0
     # via black
 numpy==1.25.2
-    # via
-    #   chroma-hnswlib
-    #   chromadb
-    #   llama-cpp-python
-    #   onnxruntime
+    # via onnxruntime
 onnxruntime==1.15.1
-    # via chromadb
-overrides==7.4.0
-    # via chromadb
+    # via wq (pyproject.toml)
 packaging==23.1
     # via
     #   black
@@ -109,41 +75,22 @@ platformdirs==3.10.0
     #   virtualenv
 pluggy==1.2.0
     # via tox
-posthog==3.0.1
-    # via chromadb
 protobuf==4.23.4
     # via onnxruntime
-pulsar-client==3.2.0
-    # via chromadb
 pydantic==1.10.12
     # via
-    #   chromadb
     #   fastapi
     #   wq (pyproject.toml)
-pypika==0.48.9
-    # via chromadb
 pyproject-api==1.5.3
     # via tox
 pyproject-hooks==1.0.0
     # via build
-python-dateutil==2.8.2
-    # via posthog
 python-dotenv==1.0.0
-    # via
-    #   uvicorn
-    #   wq (pyproject.toml)
-pyyaml==6.0.1
-    # via uvicorn
-requests==2.31.0
-    # via
-    #   chromadb
-    #   posthog
+    # via wq (pyproject.toml)
+redis==5.0.0
+    # via wq (pyproject.toml)
 ruff==0.0.282
     # via wq (pyproject.toml)
-six==1.16.0
-    # via
-    #   posthog
-    #   python-dateutil
 sniffio==1.3.0
     # via anyio
 soupsieve==2.4.1
@@ -152,32 +99,16 @@ starlette==0.27.0
     # via fastapi
 sympy==1.12
     # via onnxruntime
-tokenizers==0.13.3
-    # via chromadb
 tox==4.6.4
     # via wq (pyproject.toml)
-tqdm==4.65.0
-    # via chromadb
 typing-extensions==4.7.1
     # via
-    #   chromadb
     #   fastapi
-    #   llama-cpp-python
     #   pydantic
-urllib3==2.0.4
-    # via requests
-uvicorn[standard]==0.23.2
-    # via
-    #   chromadb
-    #   wq (pyproject.toml)
-uvloop==0.17.0
-    # via uvicorn
+uvicorn==0.23.2
+    # via wq (pyproject.toml)
 virtualenv==20.24.2
     # via tox
-watchfiles==0.19.0
-    # via uvicorn
-websockets==11.0.3
-    # via uvicorn
 wheel==0.41.1
     # via pip-tools
 
