--- a/requirements.txt
+++ b/requirements.txt
@@ -16,8 +16,12 @@ build==0.10.0
     # via pip-tools
 cachetools==5.3.1
     # via tox
+certifi==2023.7.22
+    # via requests
 chardet==5.2.0
     # via tox
+charset-normalizer==3.2.0
+    # via requests
 click==8.1.6
     # via
     #   black
@@ -42,7 +46,9 @@ h11==0.14.0
 humanfriendly==10.0
     # via coloredlogs
 idna==3.4
-    # via anyio
+    # via
+    #   anyio
+    #   requests
 isort==5.12.0
     # via wq (pyproject.toml)
 jinja2==3.1.2
@@ -89,6 +95,8 @@ python-dotenv==1.0.0
     # via wq (pyproject.toml)
 redis==5.0.0
     # via wq (pyproject.toml)
+requests==2.31.0
+    # via wq (pyproject.toml)
 ruff==0.0.282
     # via wq (pyproject.toml)
 sniffio==1.3.0
@@ -99,12 +107,18 @@ starlette==0.27.0
     # via fastapi
 sympy==1.12
     # via onnxruntime
+tokenizers==0.13.3
+    # via wq (pyproject.toml)
 tox==4.6.4
+    # via wq (pyproject.toml)
+tqdm==4.66.1
     # via wq (pyproject.toml)
 typing-extensions==4.7.1
     # via
     #   fastapi
     #   pydantic
+urllib3==2.0.4
+    # via requests
 uvicorn==0.23.2
     # via wq (pyproject.toml)
 virtualenv==20.24.2
