Add telegram bot

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@
 #    pip-compile --extra=dev --output-file=requirements.txt pyproject.toml
 #
 anyio==3.7.1
-    # via starlette
+    # via
+    #   httpcore
+    #   starlette
 beautifulsoup4==4.12.2
     # via bs4
 black==23.7.0
@@ -17,7 +19,10 @@ build==0.10.0
 cachetools==5.3.1
     # via tox
 certifi==2023.7.22
-    # via requests
+    # via
+    #   httpcore
+    #   httpx
+    #   requests
 chardet==5.2.0
     # via tox
 charset-normalizer==3.2.0
@@ -42,12 +47,19 @@ filelock==3.12.2
 flatbuffers==23.5.26
     # via onnxruntime
 h11==0.14.0
-    # via uvicorn
+    # via
+    #   httpcore
+    #   uvicorn
+httpcore==0.17.3
+    # via httpx
+httpx==0.24.1
+    # via wq (pyproject.toml)
 humanfriendly==10.0
     # via coloredlogs
 idna==3.4
     # via
     #   anyio
+    #   httpx
     #   requests
 isort==5.12.0
     # via wq (pyproject.toml)
@@ -100,7 +112,10 @@ requests==2.31.0
 ruff==0.0.282
     # via wq (pyproject.toml)
 sniffio==1.3.0
-    # via anyio
+    # via
+    #   anyio
+    #   httpcore
+    #   httpx
 soupsieve==2.4.1
     # via beautifulsoup4
 starlette==0.27.0
