Add logging conf

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,13 +11,13 @@ dependencies = [
     "fastapi",
     "uvicorn",
     "pydantic",
+    "ecs-logging",
     "jinja2",
     "python-dotenv",
     "bs4",
     "redis",
     "onnxruntime",
     "tokenizers",
-    "requests",
     "tqdm",
     "httpx",
 ]
