--- a/requirements.txt
+++ b/requirements.txt
@@ -22,11 +22,8 @@ certifi==2023.7.22
     # via
     #   httpcore
     #   httpx
-    #   requests
 chardet==5.2.0
     # via tox
-charset-normalizer==3.2.0
-    # via requests
 click==8.1.6
     # via
     #   black
@@ -38,6 +35,8 @@ coloredlogs==15.0.1
     # via onnxruntime
 distlib==0.3.7
     # via virtualenv
+ecs-logging==2.1.0
+    # via wq (pyproject.toml)
 fastapi==0.99.1
     # via wq (pyproject.toml)
 filelock==3.12.2
@@ -60,7 +59,6 @@ idna==3.4
     # via
     #   anyio
     #   httpx
-    #   requests
 isort==5.12.0
     # via wq (pyproject.toml)
 jinja2==3.1.2
@@ -107,8 +105,6 @@ python-dotenv==1.0.0
     # via wq (pyproject.toml)
 redis==5.0.0
     # via wq (pyproject.toml)
-requests==2.31.0
-    # via wq (pyproject.toml)
 ruff==0.0.282
     # via wq (pyproject.toml)
 sniffio==1.3.0
@@ -132,8 +128,6 @@ typing-extensions==4.7.1
     # via
     #   fastapi
     #   pydantic
-urllib3==2.0.4
-    # via requests
 uvicorn==0.23.2
     # via wq (pyproject.toml)
 virtualenv==20.24.2
